# payme

./: Cargo.toml  LICENSE  README.md
src/: core.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs
src/api/authentication/: mod.rs
src/api/middleware/: authorization.rs  mod.rs
src/core/: api.rs  events.rs  infrastructure.rs  models.rs  services.rs
src/core/api/: commands.rs  commands_test.rs  queries.rs
src/core/infrastructure/: kafka.rs  stripe.rs
src/core/services/: payment_processor.rs  status_consumer.rs
