[package]
name = "payme"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.40",features = ["serde"] }
serde = {version = "1.0.218" , features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1" , features = ["v4", "serde"]}
