[package]
name = "payme"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper"] }
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = {version = "0.4.40",features = ["serde"] }
rdkafka = { version = "0.36.0", features = ["cmake-build"] }
serde = {version = "1.0.218" , features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1" , features = ["v4", "serde"]}
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
jsonwebtoken = "9.2.0"
tower-http = { version = "0.1.3", features = ["trace", "cors", "auth"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
bcrypt = "0.15.1"
anyhow = "1.0.80"
http-body = "0.4.5"
http-body-util = "0.1.0"

[dev-dependencies]
axum-test = "14.4"